# mypy-runner

./: README.md  README.rst  mypy.ini  mypyrun.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload.sh
